# kkadsKipa

./: .replit  jsondati.json  pyproject.toml
datubaze/: d_gramatina.py  db.py  k_gramatina.py
flask1/: flask1.py
ieskaite 3/: d_cenas.py  db.py  v_cenas.py
ieskaite_3/: d_cenas.py  db.py  v_cenas.py
modeli/: q.py
name/: main.py
tekstafaili/: MASIVI.py  csv.py  faili.py  jsonfaili.py
txt/: 04_04.py  11_04.py  dati.db  dzelzcelaInfSist.py  kokolo.py  sqLite.py
