[tool.poetry]
name = "repl_python3_kkadsKipa"
version = "0.1.0"
description = ""
authors = ["jurijsml <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.4"
PySimpleGUI = "^4.58.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
